several changes to provide compatibility to Java 21