@@ -90,7 +90,7 @@ public class DintRxTx extends RxTx{
     public String toString(){
         String str = null;
         try{
-            str = new Long(get()).toString();
+            str = Long.valueOf(get()).toString();
         }
         catch(AddressException exc)
         {
